--- a/.github/workflows/01-basic-docker-build.yaml
+++ b/.github/workflows/01-basic-docker-build.yaml
@@ -13,6 +13,8 @@ jobs:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
             
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -25,3 +27,5 @@ jobs:
         with:
           push: ${{ github.event_name != 'pull_request' }}
           tags: jmsullivan99/citest:latest,jmsullivan99/citest:01
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
