--- a/.github/workflows/01-basic-docker-build.yaml
+++ b/.github/workflows/01-basic-docker-build.yaml
@@ -78,7 +78,7 @@ jobs:
         id: docker_meta
         uses: docker/metadata-action@v5
         with:
-          images: bretfisher/docker-ci-automation
+          images: jmsullivan99/citest
           flavor: |
             latest=false
           tags: |
